tests/snapshots/lexer_snapshots__lexer_all@tokens-85.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_type_expr_primitive.of
---
Ok(
    [
        Token {
            token_type: Type,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "X",
            ),
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Eq,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: Semicolon,
            position: 13,
            line: 1,
            column: 14,
        },
    ],
)
