tests/snapshots/lexer_snapshots__lexer_all@tokens-86.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/02_variables/var_from_if.of
---
Ok(
    [
        Token {
            token_type: Var,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "status",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: If,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: GT,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Eq,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Int(
                "18",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: StringLit(
                "Adult",
            ),
            position: 39,
            line: 2,
            column: 10,
        },
        Token {
            token_type: RightBrace,
            position: 41,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Else,
            position: 46,
            line: 3,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 48,
            line: 3,
            column: 9,
        },
        Token {
            token_type: StringLit(
                "Minor",
            ),
            position: 58,
            line: 4,
            column: 10,
        },
        Token {
            token_type: RightBrace,
            position: 60,
            line: 5,
            column: 2,
        },
        Token {
            token_type: Semicolon,
            position: 61,
            line: 5,
            column: 3,
        },
    ],
)
