tests/snapshots/lexer_snapshots__lexer_all@tokens-89.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/parser/parse_type_expr_function_type.of
---
Ok(
    [
        Token {
            token_type: Type,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "X",
            ),
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Eq,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: LeftParen,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Comma,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Minus,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: GT,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Semicolon,
            position: 28,
            line: 1,
            column: 29,
        },
    ],
)
